--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+    "next-intl": "^3.15.3"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
